Chapter 3: Mostly static pages

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@
 /config/credentials.yml.enc
 
 /config/database.yml
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
+
+/test
